<resources>
    <string name="app_name">CS5520_Group9</string>
    <string name="team_name">About</string>
    <string name="web_service">Web Service</string>
    <string name="firebase_database">Stick It To Em</string>
    <string name="group_project">Group Project</string>
    <string name="team">Team Name: Group 9 \nTeam members:\nShoujuan Fan\n
        Cai Zhang\nLiyang Pang\nBaoyan Li\nYaozheng Wang</string>
    <string name="search_cat_images">Search cat images</string>
    <string name="search">Search</string>
    <string name="cat_images">Cat Images</string>
    <string name="login">Login</string>
    <string name="username">Enter your username To login</string>
    <string name="sendSticker_send">SEND</string>
    <string name="sendSticker_Check">Check History</string>
    <string name="stickers_string">Stickers</string>
    <string name="from_user_string">From User</string>
    <string name="send_time_string">Send Time</string>
    <string name="send_to">Send to:</string>
    <string name="register_game">Create Account</string>

    <string name="game_name">MatchingMatching</string>
    <string name="login_name">Log in</string>
    <string name="register_name">Register</string>
    <string name="setting_game">Game</string>
    <string name="setting_difficulty">Difficulty Level</string>
    <string name="setting_playmode">Play Mode</string>
    <string name="setting_button_add">+</string>
    <string name="setting_button_subtract">-</string>
    <string name="setting_button_easy">Easy</string>
    <string name="setting_button_medium">Medium</string>
    <string name="setting_button_hard">Hard</string>
    <string name="setting_button_single_player">Single Player</string>
    <string name="setting_button_play_with_friend">Play against Other Player</string>
    <string name="setting_button_play">Play</string>
    <string name="score_board">Score Board</string>
    <string name="setting_button_logout">Logout</string>
    <string name="matching_shake_phone_line">Shake to join an existing game</string>
    <string name="matching_create_game_line">Create a new online game</string>
    <string name="back">BACK</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="your_best_score">Your best score:</string>
    <string name="you_have_played">You have played</string>
    <string name="easy">Easy</string>
    <string name="background_image">background_image</string>
</resources>