<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.MainActivity">

    <Button
        android:id="@+id/teamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_name"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/webService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/webService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web_service"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/firebaseDB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamName" />

    <Button
        android:id="@+id/firebaseDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firebase_database"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/groupProject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/webService" />

    <Button
        android:id="@+id/groupProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_project"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firebaseDB" />

</androidx.constraintlayout.widget.ConstraintLayout>