<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".groupProject.ScoreboardActivity">

    <Button
        android:id="@+id/backButton"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:backgroundTint="@color/white"
        android:fontFamily="casual"
        android:text="@string/back"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/background_image"
        android:scaleType="fitXY"
        android:src="@drawable/bg_scoreboard_1600x900"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/scoreButtonToggleGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="130dp"
            app:checkedButton="@id/easy"
            app:singleSelection="true">

            <Button
                android:id="@+id/easy"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:fontFamily="casual"
                android:text="@string/easy"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/medium"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:fontFamily="casual"
                android:text="@string/medium"
                android:textStyle="bold" />

            <Button
                android:id="@+id/hard"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:fontFamily="casual"
                android:text="@string/hard"
                android:textStyle="bold" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:id="@+id/bestScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="casual"
            android:text="@string/your_best_score"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/playedNums"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="casual"
            android:text="@string/you_have_played"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_height="0dp"
            android:layout_weight="90"
            android:padding="5dp"
            android:scrollbars="vertical" />
    </LinearLayout>

</RelativeLayout>