<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/receivedStickers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginBottom="@dimen/text_margin"
        android:layout_marginStart="@dimen/list_margin"
        android:layout_marginEnd="@dimen/list_margin"
        android:text="@string/stickers_string"
        android:textSize="20sp"
        android:minWidth="@dimen/image_size_small"
        app:layout_constraintBottom_toTopOf="@id/receivedHistoryRV"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fromUser"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/fromUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginBottom="@dimen/text_margin"
        android:layout_marginStart="@dimen/list_margin"
        android:layout_marginEnd="@dimen/list_margin"
        android:text="@string/from_user_string"
        android:textSize="20sp"
        android:minWidth="@dimen/min_width"
        app:layout_constraintBottom_toTopOf="@id/receivedHistoryRV"
        app:layout_constraintStart_toEndOf="@id/receivedStickers"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sendTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginBottom="@dimen/text_margin"
        android:layout_marginStart="@dimen/list_margin"
        android:layout_marginEnd="@dimen/list_margin"
        android:text="@string/send_time_string"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/receivedHistoryRV"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/fromUser"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/receivedHistoryRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/receivedStickers" />

</androidx.constraintlayout.widget.ConstraintLayout>